--- a/app/src/main/res/layout/activity_club_profile.xml
+++ b/app/src/main/res/layout/activity_club_profile.xml
@@ -1,9 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ClubApp.ClubProfile">
+    android:background="@color/colorgreen"
+    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:gravity="center"
+                android:layout_marginRight="10dp"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/logout"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginRight="10dp"
+                    android:src="@drawable/newlogout" />
+
+              <LinearLayout
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:gravity="center">
+                  <com.mikhaellopez.circularimageview.CircularImageView
+                    android:id="@+id/clubprofle"
+                      android:layout_width="200dp"
+                      android:layout_height="200dp"
+                      app:civ_border_color="#EEEEEE"
+                      app:civ_border_width="4dp"
+                      app:civ_shadow="true"
+                      app:civ_shadow_radius="10"
+                    android:src="@drawable/buty"
+                    />
+              </LinearLayout>
+
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/baskvill"
+                    android:padding="10dp"
+                    android:text=""
+                    android:textColor="@color/colorblack"
+                    android:textSize="@dimen/textsize_large"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/mobile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/baskvill"
+                    android:padding="10dp"
+                    android:text=""
+                    android:textColor="@color/colorblack"
+
+                    android:textSize="@dimen/textsize_large"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/street"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/baskvill"
+
+                    android:padding="10dp"
+                    android:text=""
+                    android:textColor="@color/colorblack"
+                    android:textSize="@dimen/textsize_large"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/city"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/baskvill"
+                    android:padding="10dp"
+
+                    android:text=""
+                    android:textColor="@color/colorblack"
+                    android:textSize="@dimen/textsize_large"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/district"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/baskvill"
+
+                    android:padding="10dp"
+                    android:text=""
+                    android:textColor="@color/colorblack"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/state"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/baskvill"
+
+                    android:padding="10dp"
+                    android:text=""
+                    android:textColor="@color/colorblack"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/country"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/baskvill"
+
+                    android:padding="10dp"
+                    android:text=""
+                    android:textColor="@color/colorblack"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/baskvill"
+
+                    android:padding="10dp"
+                    android:text=""
+                    android:textColor="@color/colorblack"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/edit"
+                android:layout_width="150dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/backgroundedittext"
+                android:fontFamily="@font/baskvill"
+                android:gravity="center"
+                android:text="Update Profile"
+                android:textColor="@color/colorpink"
+
+                android:textSize="@dimen/textsize_large"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+    </ScrollView>
+
+</LinearLayout>
