--- a/app/src/main/res/layout/activity_single_itemview.xml
+++ b/app/src/main/res/layout/activity_single_itemview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/colorwhite"
+    android:background="@drawable/color"
     android:id="@+id/servicelayout"
 
     android:layout_height="match_parent"
@@ -18,7 +18,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:id="@+id/serviceimage"
-                android:src="@drawable/ac"/>
+                android:src="@drawable/ac"
+                android:foreground="@drawable/foreground"/>
+
 
             <LinearLayout
                 android:id="@+id/servicedetails"
@@ -105,13 +107,14 @@
 
                 <TextView
                     android:id="@+id/view_feedback"
-                    android:layout_width="150dp"
+                    android:layout_width="140dp"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/backgrounndviewall"
+                    android:background="@drawable/custom_edittext"
                     android:fontFamily="@font/robotoregular"
                     android:gravity="center"
-                    android:textColor="@color/colorwhite"
+                    android:textColor="@color/colorpink"
                     android:textStyle="normal"
+
                     android:layout_marginLeft="15dp"
                     android:text="Hide Feedback"
                     android:textSize="18dp" />
@@ -119,50 +122,51 @@
 
                 <TextView
                     android:id="@+id/send_feedback"
-                    android:layout_width="150dp"
+                    android:layout_width="140dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:layout_marginLeft="40dp"
-                    android:background="@drawable/backgrounndviewall"
+                    android:background="@drawable/custom_edittext"
                     android:fontFamily="@font/robotoregular"
                     android:gravity="center"
-                    android:textColor="@color/colorwhite"
+                    android:textColor="@color/colorpink"
                     android:textStyle="normal"
                     android:layout_marginRight="15dp"
-                    android:text="send Feedback"
+                    android:text="Send Feedback"
                     android:textSize="18dp" />
 
             </LinearLayout>
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="300dp"
+                android:layout_gravity="center"
+                android:layout_height="100dp"
                 android:layout_below="@+id/feedback"
                 >
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_width="300dp"
+                    android:textAlignment="center"
+                    android:layout_height="100dp">
 
                 </android.support.v7.widget.RecyclerView>
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true"
-                android:layout_gravity="bottom"
-                android:background="@drawable/itembackground"
+                android:layout_gravity="center"
+                android:gravity="bottom"
                 android:layout_alignParentLeft="true">
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
                     android:id="@+id/booknow"
                     android:textSize="@dimen/textsize_large"
-                    android:background="@drawable/backgrounndviewall"
-                    android:textColor="@color/colortruewhite"
+                    android:background="@drawable/custom_edittext"
+                    android:textColor="@color/colorpink"
                     android:fontFamily="@font/robotoregular"
                     android:text="Book Now"/>
             </LinearLayout>
