--- a/app/src/main/res/layout/edituser.xml
+++ b/app/src/main/res/layout/edituser.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -21,15 +22,8 @@
                 android:textSize="@dimen/textsize_large"
                 android:fontFamily="@font/robotobold"
                 android:layout_marginBottom="20dp"
-                android:textColor="@color/colorPrimary"/>
-            <android.support.v7.widget.CardView
-                app:cardElevation="5dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
+                android:textColor="@color/colorsecondary"/>
+
 
                 <LinearLayout
 
@@ -48,6 +42,8 @@
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/name"
                             android:layout_marginRight="10dp"
+                            android:textColor="@color/colorblack"
+                            android:fontFamily="@font/robotoregular"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Name" />
@@ -77,6 +73,8 @@
                             android:id="@+id/gender"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:textColor="@color/colorblack"
+                            android:fontFamily="@font/robotoregular"
                             android:hint="Gender"
                             android:layout_marginRight="10dp"
 
@@ -92,6 +90,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Age"
+                            android:textColor="@color/colorblack"
+                            android:fontFamily="@font/robotoregular"
                             android:layout_marginRight="10dp"
                             android:inputType="text"
                             />
@@ -105,11 +105,12 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Address"
+                            android:textColor="@color/colorblack"
+                            android:fontFamily="@font/robotoregular"
                             android:layout_marginRight="10dp"
                             android:inputType="text"
                             />
                     </android.support.design.widget.TextInputLayout>
-
                     <Button
                         android:elevation="5dp"
                         android:id="@+id/login"
@@ -119,14 +120,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_marginTop="20dp"
-                        android:background="@color/colorPrimary"
+                        android:background="@color/colorsecondary"
                         android:textAllCaps="false"
                         android:text="Save"
                         android:textColor="#fff" />
                 </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
         </LinearLayout>
     </ScrollView>
 
