--- a/app/src/main/res/layout/viewuser.xml
+++ b/app/src/main/res/layout/viewuser.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="@color/colorgreen"
     android:layout_height="match_parent">
 
     <ScrollView
@@ -13,99 +14,119 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-
-            <android.support.v7.widget.CardView
-                app:cardElevation="5dp"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_gravity="center"
                 android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp">
+                android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_marginLeft="10dp"
+                <ImageView
+                    android:id="@+id/logout"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="15dp"
                     android:layout_marginRight="10dp"
-                    android:background="@drawable/backgroundedittext"
+                    android:src="@drawable/newlogout" />
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/userlogout"
-                        android:layout_marginTop="15dp"
-                        android:layout_gravity="right"/>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text=""
-                        android:textColor="@color/colorblack"
-                        android:textSize="@dimen/textsize_medium"
+                    android:gravity="center">
 
-                        android:fontFamily="@font/roboto_tin"
-                        android:id="@+id/name"/>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text=""
-                        android:textColor="@color/colorblack"
-                        android:textSize="@dimen/textsize_medium"
-                        android:fontFamily="@font/roboto_tin"
-                        android:id="@+id/mobile"/>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                       />
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text=""
-                        android:textColor="@color/colorblack"
-                        android:textSize="@dimen/textsize_medium"
-
-                        android:fontFamily="@font/roboto_tin"
-                        android:id="@+id/gender"/>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                      />
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text=""
-                        android:textColor="@color/colorblack"
-                        android:textSize="@dimen/textsize_medium"
-                        android:fontFamily="@font/roboto_tin"
-                        android:id="@+id/age"/>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        />
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text=""
-                        android:textColor="@color/colorblack"
-                        android:textSize="@dimen/textsize_medium"
-                        android:fontFamily="@font/roboto_tin"
-                        android:id="@+id/address"/>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        />
+                <com.mikhaellopez.circularimageview.CircularImageView
+                    android:id="@+id/userprofle"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    app:civ_border_color="#EEEEEE"
+                    app:civ_border_width="4dp"
+                    app:civ_shadow="true"
+                    app:civ_shadow_radius="10"
+                    android:onClick="OpenGallery"
+                    android:src="@drawable/buty"
+                    />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/baskvill"
+                    android:padding="10dp"
+                    android:text=""
+                    android:textColor="@color/colorblack"
+                    android:textSize="@dimen/textsize_large"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/mobile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/baskvill"
+                    android:padding="10dp"
+                    android:text=""
+                    android:textColor="@color/colorblack"
+
+                    android:textSize="@dimen/textsize_large"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/gender"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/baskvill"
+
+                    android:padding="10dp"
+                    android:text=""
+                    android:textColor="@color/colorblack"
+                    android:textSize="@dimen/textsize_large"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/age"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/baskvill"
+                    android:padding="10dp"
+
+                    android:text=""
+                    android:textColor="@color/colorblack"
+                    android:textSize="@dimen/textsize_large"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/baskvill"
+
+                    android:padding="10dp"
+                    android:text=""
+                    android:textColor="@color/colorblack"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/edit"
+                    android:layout_width="150dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/backgroundedittext"
+                    android:fontFamily="@font/baskvill"
+                    android:gravity="center"
+                    android:text="Update Profile"
+                    android:textColor="@color/colorpink"
+
+                    android:textSize="@dimen/textsize_large"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
     </ScrollView>
