--- a/app/src/main/res/menu/club_navigation.xml
+++ b/app/src/main/res/menu/club_navigation.xml
@@ -11,7 +11,7 @@
     <item
         android:id="@+id/navigation_feedback"
         android:icon="@drawable/outline_history"
-        android:title="View Feedback"
+        android:title="Feedback"
         app:showAsAction="always"/>
 
     <!--<item-->
