--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,5 +24,12 @@
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textSize">20sp</item>
     </style>
-
+    <style name="Widget.BottomNavigationView"
+        parent="Widget.Design.BottomNavigationView">
+        <item name="fontFamily">@font/baskvill</item>
+    </style>
+    <style name="NavigationViewOwnStyle">
+        <item name="android:listPreferredItemHeightSmall">18dp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
 </resources>
