--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="colorblue">#0738e7</color>
     <color name="colororgange">#f99b3d</color>
     <color name="colorlite">#ffc375</color>
+    <color name="colorlitegrey">#F5F3F3</color>
     <color name="colorgrey">#e4e3e2</color>
     <color name="colordarkgrey">#d1cfcd</color>
     <color name="colordeepgrey">#9c9c9b</color>
