--- a/app/src/main/res/layout/activity_club_login.xml
+++ b/app/src/main/res/layout/activity_club_login.xml
@@ -5,24 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ClubApp.ClubLogin"
-    tools:ignore="MissingDefaultResource">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    android:background="@color/colorlitegrey"
+    tools:context=".ClubApp.ClubLogin">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <android.support.v7.widget.CardView
 
-                app:cardElevation="5dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="50dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
 
                 <LinearLayout
                     android:layout_marginTop="50dp"
@@ -51,20 +40,24 @@
                             android:layout_width="match_parent"
                             android:singleLine="true"
                             android:inputType="textEmailAddress"
-                            android:layout_height="wrap_content"
+                            android:layout_height="40dp"
+                            android:background="@drawable/adapterbackground"
                             android:hint="Email" />
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
                         app:passwordToggleEnabled="true"
                         android:layout_width="match_parent"
+
+                        android:layout_marginTop="10dp"
                         android:layout_height="wrap_content">
 
                         <android.support.design.widget.TextInputEditText
 
                             android:id="@+id/password"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:background="@drawable/adapterbackground"
+                            android:layout_height="40dp"
                             android:hint="Password"
 
 
@@ -75,7 +68,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:layout_marginTop="20dp">
 
                         <RadioGroup
                             android:layout_marginTop="15dp"
@@ -101,9 +95,10 @@
                     </LinearLayout>
 
                     <Button
-                        android:elevation="5dp"
+                        android:elevation="20dp"
                         android:id="@+id/login"
                         android:layout_width="match_parent"
+                        android:soundEffectsEnabled="true"
                         android:layout_height="40dp"
                         android:layout_marginTop="20dp"
                         android:background="@color/colorsecondary"
@@ -133,12 +128,5 @@
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
-
-
-
         </LinearLayout>
-    </ScrollView>
-
-
 </LinearLayout>
