--- a/app/src/main/res/layout/activity_viewa_ll_services.xml
+++ b/app/src/main/res/layout/activity_viewa_ll_services.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="60dp"
     android:background="@color/colorgrey"
     android:orientation="vertical">
         <LinearLayout
