--- a/app/src/main/res/layout/nearbyshops.xml
+++ b/app/src/main/res/layout/nearbyshops.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="10dp"
+            android:visibility="gone"
             android:background="@color/colorlightpink"
             >
             <LinearLayout
