--- a/app/src/main/res/layout/adapterclubappointments.xml
+++ b/app/src/main/res/layout/adapterclubappointments.xml
@@ -2,11 +2,16 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@drawable/adapterbackground"
-    android:orientation="horizontal"
-    android:layout_gravity="center"
-    android:gravity="center"
+    android:orientation="vertical"
     android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/adapterbackground"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:gravity="center">
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
@@ -102,6 +107,7 @@
 
         </LinearLayout>
 
+    </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
