--- a/app/src/main/res/layout/adaptertodaysschedule.xml
+++ b/app/src/main/res/layout/adaptertodaysschedule.xml
@@ -89,6 +89,28 @@
 
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_weight=".2"
+                    android:background="@drawable/custom_edittext"
+                    android:layout_height="32dp"
+                    android:text="Re-Schedule"
+                    android:textColor="@color/colorpink"
+                    android:gravity="center"
+                    android:elevation="10dp"
+                    android:textAllCaps="false"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/update"
+                    android:fontFamily="@font/robotoregular"
+                    android:textSize="@dimen/textsize_medium"
+
+                    />
+
+
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
